# Tether_Lift

./: .devcontainer  .gitignore  .gitmodules  LICENSE  README.md
IEEE_IROS_2026/: Main.tex
IEEE_IROS_2026/Figures/: summary_stats.txt
IEEE_IROS_2026/References/: References.bib
IEEE_IROS_2026/Sections/: Section_I.1_Related_Work.tex  Section_I.2_Contributions.tex  Section_III_GPAC_Control_Architecture.tex  Section_II_System_Modeling.tex  Section_IV_Decentralized_Adaptive_Estimation.tex  Section_I_Introduction.tex  Section_VIII_Conclusion.tex  Section_VIII_Safety_Inspired.tex  Section_VII_Results.tex  Section_VI_Simulation_Environment.tex  Section_V_CBF_Safety_Filter.tex  section_III_Control.tex  section_II_Modeling.tex  section_IV_Estimation.tex  section_I_Introduction.tex  section_VII_Conclusion.tex  section_VI_Results.tex  section_V_CBF.tex
References/: Section_IX_Conclusion.tex
Research/: .devcontainer  README.md
Research/cpp/: CMakeLists.txt  README.md
Research/cpp/include/: adaptive_lift_controller.h  adaptive_load_estimator.h  cbf_safety_filter.h  estimation_error_computer.h  estimation_utils.h  extended_state_observer.h  gpac_load_tracking_controller.h  gpac_math.h  gpac_quadcopter_controller.h  imu_sensor.h  load_estimator.h  position_velocity_estimator.h  rope_force_system.h  rope_utils.h  rope_visualizer.h
Research/cpp/src/: adaptive_lift_controller.cc  adaptive_load_estimator.cc  barometer_sensor.cc  eskf_estimator.cc  estimation_error_computer.cc  estimation_utils.cc  force_allocation_system.cc  force_allocation_system.h  gpac_cbf_safety_filter.cc  gpac_load_tracking_controller.cc  load_estimator.cc  load_tracking_controller.h  main.cc  required_force_computer.cc  required_force_computer.h  rope_force_system.cc  rope_visualizer.cc  simulation_data_logger.h  tension_plotter.cc  wind_disturbance.cc  wind_force_applicator.cc  wind_force_applicator.h
Research/outputs/logs/: README.md
Research/scripts/: README.md  generate_figures.py  generate_video.py  quad_rope_lift.py  run_monte_carlo.sh
cpp/: CMakeLists.txt  README.md
cpp/gpac/src/: main_gpac.cc
cpp/gpac/tests/: test_layer4_eso.cc
cpp/include/: barometer_sensor.h  concurrent_learning_estimator.h  decentralized_load_estimator.h  eskf_estimator.h  estimation_utils.h  gpac_cbf_safety_filter.h  gps_sensor.h  load_trajectory_generator.h  quadcopter_controller.h  tension_plotter.h  wind_disturbance.h
cpp/src/: cbf_safety_filter.cc  concurrent_learning_estimator.cc  decentralized_drone_controller.cc  decentralized_drone_controller.h  decentralized_load_estimator.cc  drone_trajectory_mapper.cc  drone_trajectory_mapper.h  estimation_utils.cc  extended_load_trajectory_generator.cc  extended_load_trajectory_generator.h  extended_state_observer.cc  gpac_quadcopter_controller.cc  gps_sensor.cc  imu_sensor.cc  load_tracking_controller.cc  load_tracking_controller.h  load_trajectory_generator.cc  main.cc  position_velocity_estimator.cc  quadcopter_controller.cc  required_force_computer.h  rope_utils.cc  simulation_data_logger.cc  simulation_data_logger.h  trajectory_visualizer.cc  trajectory_visualizer.h
outputs/figures_n3/: summary_stats.txt
outputs/figures_n5/: summary_stats.txt
outputs/monte_carlo/: README.md  extract_mc_stats.py  monte_carlo_stats.txt  monte_carlo_summary.csv  summary.csv
outputs/monte_carlo/5quad_seed042/: attitude_data.csv  barometer_measurements.csv  config.txt  control_efforts.csv  estimator_outputs.csv  gps_measurements.csv  imu_measurements.csv  tensions.csv  trajectories.csv  wind_disturbance.csv
outputs/monte_carlo/seed_001/: attitude_data.csv  barometer_measurements.csv  config.txt  control_efforts.csv  estimator_outputs.csv  gps_measurements.csv  imu_measurements.csv  tensions.csv  trajectories.csv  (+1 more)
scripts/: README.md  quad_rope_lift.py
(+153 files in other folders)
